--- a/Home.html
+++ b/Home.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1 class="middle">Roomeet</h1>
+    <div>
+        <h1 class="middle">Roomeet</h1>
+        <p id = "intro">Welcome, get ready to do things you dont like like me</p>
+    </div>
+    
+
+    <ul class = "list">
+        <li>Home</li>
+        <li><a href="Registration.html">Sign In</a></li>
+    </ul>
+
+    
 </body>
 </html>
