--- a/Registration.html
+++ b/Registration.html
@@ -40,7 +40,7 @@
         <form class = "col-6 mx-auto ">
             <div class="form-group">
             <label for="examplePhone1">Phone Number</label>
-            <input type="tel" class="form-control" id="phone" name="phone" pattern="[0-9]{10}">
+            <input type="tel" class="form-control" id="phone" name="phone" pattern="[0-9]{10}" placeholder="0123456789">
             <small id="phoneHelp" class="form-text text-dark">We'll never share your phone number with anyone else.</small>
             </div>
             <div class="form-group">
