--- a/Registration.html
+++ b/Registration.html
@@ -10,9 +10,9 @@
 
 </head>
 <body>
-  <script src="Registration.js"></script>
+  <script src="registration.js"></script>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="Home.html">Roomeet</a>
+        <a class="navbar-brand" href="home.html">Roomeet</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,11 +21,11 @@
           <ul class="navbar-nav mr-auto">
 
             <li class="nav-item">
-              <a class="nav-link" href="Registration.html">Sign Up</a>
+              <a class="nav-link" href="registration.html">Sign Up</a>
             </li>
             
             <li class="nav-item">
-                <a class="nav-link" href="SignIn.html">Sign In</a>
+                <a class="nav-link" href="sign-in.html">Sign In</a>
             </li>
           </ul>
         </div>
@@ -34,23 +34,27 @@
     
     <h1 class = "middle">Sign Up</h1>
     <div>
-        <h2 class = "submiddle">Already a member?<a href="SignIn.html">Sign in</a></h2>
+        <h2 class = "submiddle">Already a member?<a href="sign-in.html">Sign in</a></h2>
     </div>
-    <div class = "SignInForm">
+    <div class = "sign-inForm">
         <form class = "col-6 mx-auto ">
+
             <div class="form-group">
             <label for="examplePhone1">Phone Number</label>
             <input type="tel" class="form-control" id="phone" name="phone" pattern="[0-9]{10}" placeholder="0123456789">
             <small id="phoneHelp" class="form-text text-dark">We'll never share your phone number with anyone else.</small>
             </div>
+
             <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
+
             <div class="form-group">
                 <label for="exampleInputPassword2">Confirm Password</label>
                 <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Confirm Password">
-                </div>
+            </div>
+
             <div class="form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Check me out</label>
