--- a/Public/registration.html
+++ b/Public/registration.html
@@ -41,7 +41,7 @@
 
             <div class="form-group">
             <label for="examplePhone1">Phone Number</label>
-            <input type="tel" class="form-control" id="phone" name="phone" pattern="[0-9]{10}" placeholder="0123456789">
+            <input type="tel" class="form-control" id="phone" name="phone" pattern="[0-9]{10}">
             <small id="phoneHelp" class="form-text text-dark">We'll never share your phone number with anyone else.</small>
             </div>
 
